# docs/swagger.yaml
@@ -48,6 +48,8 @@ definitions:
         type: string
       name:
         type: string
+      open_hours:
+        type: string
       score:
         type: integer
       sold:
@@ -112,6 +114,17 @@ definitions:
         description: pointer type cause of omitempty
         type: integer
     type: object
+  api.UpdateShopResp:
+    properties:
+      data: {}
+      error_msg:
+        type: string
+      success:
+        type: boolean
+      total:
+        description: pointer type cause of omitempty
+        type: integer
+    type: object
 host: localhost:8081
 info:
   contact:
@@ -125,6 +138,18 @@ info:
   title: Go Dian Ping
   version: 1.0.0
 paths:
+  /shop:
+    put:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.UpdateShopResp'
+      summary: 更新商铺
+      tags:
+      - shop
   /shop-type/list:
     get:
       produces:
